# py-ponto

./: .gitignore  Makefile  README.md  delete_logs.py  main.py  pyproject.toml  start.bat.dist
config/: config.py  logging.py
config/toml/: .gitignore  settings.toml
config/yaml/: .gitignore  settings.yaml
scripts/linux/cron/: create_tasks.sh.dist
scripts/linux/sh/: delete_logs.sh.dist  start.sh.dist
scripts/windows/bats/: delete_logs.bat.dist
scripts/windows/ps1/: create-task.ps1.dist  create_tasks.ps1.dist
src/: actions.py  container.py
src/automation/: action_type.py  automation_context.py  selenium_automation.py  selenium_automation_context.py  web_browser.py
src/cantinho_trabalho/: cantinho_trabalho_service.py
src/exceptions/: application_exception.py  automation_pipeline_exception.py  notion_pipeline_exception.py
src/helpers/: date_helper.py  log_helper.py  path_helper.py  text_helper.py
src/notifier/: __init__.py  cancel.py  failed.py  start.py  success.py  timeout.py
src/notify/: __init__.py  failed.py  success.py
src/notion/: notion_block_helper.py  notion_service.py
src/selenium/: action_type.py  pipeline_automation.py
tasks/: .gitignore
tasks/linux/sh/: create_tasks.sh.dist  delete_logs.sh.dist  start.sh.dist
tasks/windows/: .gitignore
tasks/windows/ps1/: delete-task.ps1.dist
